--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ dependencies {
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:11.0.5'
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.5'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.0-rc2'
+    implementation 'org.springframework.security:spring-security-core:6.4.5'
+    implementation 'org.springframework.security:spring-security-web:6.4.5'
+    implementation 'org.springframework.security:spring-security-config:6.4.5'
+
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
