renamed the project to spring mvc

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,13 +22,14 @@ dependencies {
     implementation 'org.springframework:spring-aop:7.0.0-M3'
     implementation 'org.springframework:spring-instrument:7.0.0-M3'
     implementation 'org.springframework:spring-webmvc:7.0.0-M3'
-    implementation 'org.springframework:spring-web:7.0.0-M3'
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:11.0.5'
     implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.5'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.19.0-rc2'
     implementation 'org.springframework.security:spring-security-core:6.4.5'
     implementation 'org.springframework.security:spring-security-web:6.4.5'
     implementation 'org.springframework.security:spring-security-config:6.4.5'
+    implementation 'org.springframework.security:spring-security-oauth2-resource-server:6.4.5'
+    implementation 'org.springframework.security:spring-security-oauth2-client:6.4.5'
     implementation 'org.springframework.data:spring-data-jdbc:4.0.0-M2'
     implementation 'mysql:mysql-connector-java:8.0.33'
 
