--- a/settings.gradle
+++ b/settings.gradle
@@ -10,5 +10,5 @@ plugins {
     id 'org.gradle.toolchains.foojay-resolver-convention' version '0.9.0'
 }
 
-rootProject.name = 'expense_management_tracker'
+rootProject.name = 'practice_spring_mvc'
 include('app')
